# CppCoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  r.ps1  t.ps1
examples/: CMakeLists.txt  README.md  demo_events.jsonl  minimal_usage.cpp  replay_demo.cpp
include/cppcoder/: ChatServer.h  CodebaseScanner.h  EditEngine.h  Editor.h  FactExtractor.h  JsonUtil.h  Judge.h  Logging.h  MemoryStore.h  OllamaClient.h  PatchApplier.h  README.md  ResearchEngine.h  TaskQueue.h  Types.h  Worker.h
src/: CMakeLists.txt  ChatServer.cpp  CodebaseScanner.cpp  EditEngine.cpp  Editor.cpp  FactExtractor.cpp  JsonUtil.cpp  Judge.cpp  Logging.cpp  MemoryStore.cpp  OllamaClient.cpp  PatchApplier.cpp  README.md  ResearchEngine.cpp  TaskQueue.cpp  Worker.cpp  main.cpp
tests/: CMakeLists.txt  CodebaseScannerTests.cpp  EditEngineTests.cpp  EditorTests.cpp  FactExtractorTests.cpp  JsonUtilTests.cpp  JudgeTests.cpp  MemoryStoreTests.cpp  PatchApplierTests.cpp  README.md  ResearchEngineTests.cpp  TaskQueueTests.cpp  TypesTests.cpp  WorkerTests.cpp
web/: README.md  chat.html  index.html
